--- a/src/index.css
+++ b/src/index.css
@@ -1,33 +1,33 @@
-.fade-anim img{
-    animation: fadeAnim 0.5s
-    ease-out;
+.fade-anim img {
+	animation: fadeAnim 0.5s ease-out;
 }
 @keyframes fadeAnim {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
+	from {
+		opacity: 0;
+	}
+	to {
+		opacity: 1;
+	}
 }
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer components {
-    .displayItemsList {
-        @apply bg-red-600
-    }
-    .headerBottomHover {
-        @apply hover:border h-full w-auto  border-2 border-white 
-    }
-    .productLi {
-        @apply flex justify-end p-[4px] gap-4 border-b-[0.5px] border-black 
-    }
-    .productLiHover {
-        @apply bottom-[60%] duration-0
-    }
-
-
+	.displayItemsList {
+		@apply bg-red-600;
+	}
+	.headerBottomHover {
+		@apply hover:border h-full w-auto  border-2 border-white;
+	}
+	.productLi {
+		@apply flex justify-end p-[4px] gap-4 border-b-[0.5px] border-black;
+	}
+	.productLiHover {
+		@apply bottom-[60%] duration-0;
+	}
+	.buttonStyle {
+		@apply px-28 py-2 w-full cursor-pointer font-semibold rounded-lg 
+        bg-yellow-300 bg-gradient-to-tr from-yellow-400 to-yellow-200;
+	}
 }
-
