--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 .fade-anim img {
 	animation: fadeAnim 0.5s ease-out;
 }
+
 @keyframes fadeAnim {
 	from {
 		opacity: 0;
@@ -29,5 +30,8 @@
 	.buttonStyle {
 		@apply px-28 py-2 w-full cursor-pointer font-semibold rounded-lg 
         bg-yellow-300 bg-gradient-to-tr from-yellow-400 to-yellow-200;
+	}
+	.shadow-outline-blue {
+		box-shadow: #a6e7f3 0px 0px 0px 3px;
 	}
 }
