--- a/src/components/products/products.css
+++ b/src/components/products/products.css
@@ -5,7 +5,8 @@
 	color: blue;
 	cursor: pointer;
 }
-.loading-container {
+.loading-container,
+.error-message {
 	display: flex;
 	position: absolute;
 	left: 0px;
@@ -15,6 +16,9 @@
 	justify-content: center;
 	height: 100vh;
 	background: rgba(0, 0, 0, 0.9);
+}
+.error-message {
+	color: red;
 }
 
 .loading-ring {
